[package]
name = "rpme"
version = "0.0.1"
description = "piston prototype"
license = "CC0-1.0"
authors = ["Lightnet <>"]
repository = ""
readme = "README.md"
edition = "2018"

[dependencies]
specs = "0.16.1"

piston_window = "0.107.0"
find_folder = "0.3.0"
piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"
#dyon = "0.44.0"

#[[example]]
#name = "demo_window"
#path = "examples/demo_window.rs"
