[package]
name = "rpme"
version = "0.0.1"
description = "piston prototype"
license = "CC0-1.0"
authors = ["Lightnet <>"]
repository = ""
readme = "README.md"
edition = "2018"

[dependencies]
specs = "0.16.1"
specs-derive = "0.4.1"

piston_window = "0.107.0"
find_folder = "0.3.0"
piston = "0.49.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.72.0"
#dyon = "0.44.0"

#[[example]]
#name = "demo_window"
#path = "examples/demo_window.rs"

[[example]]
name = "main_button"
path = "examples/main_button.rs"

[[example]]
name = "main_hellotext"
path = "examples/main_hellotext.rs"

[[example]]
name = "main_logo"
path = "examples/main_logo.rs"

[[example]]
name = "main_rotatesqaure"
path = "examples/main_rotatesqaure.rs"

[[example]]
name = "main_simple"
path = "examples/main_simple.rs"

[[example]]
name = "main_test01"
path = "examples/main_test01.rs"

[[example]]
name = "main_test02"
path = "examples/main_test02.rs"
